force-app/main/default/objects/LPCR_ContratPartenaire__c/LPCR_ContratPartenaire__c.object-meta.xml
<CustomObject>
    <description>Contrat entre LPCR et un gestionnaire de crèches externe</description>
    <label>Contrat partenaire</label>
    <nameField>
        <displayFormat>{YYYY}.{000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contrats partenaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>