force-app/main/default/objects/LPCR_ContratPartenaire__c/fields/LPCR_CDDCDI__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CDDCDI__c</fullName>
    <label>CDD/CDI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CDD</fullName>
            </value>
            <value>
                <fullName>CDI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>