force-app/main/default/objects/LPCR_ContratPartenaire__c/fields/LPCR_CodePostal__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CodePostal__c</fullName>
    <label>Code Postal</label>
    <length>10</length>
    <type>Text</type>
</CustomField>