force-app/main/default/objects/LPCR_ContratPartenaire__c/fields/LPCR_Compte__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Compte__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Compte</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Partenaire</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contrats Partenaire</relationshipLabel>
    <relationshipName>ContratsPartenaires</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>