force-app/main/default/objects/LPCR_ContratPartenaire__c/fields/LPCR_ContactLPCR__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactLPCR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact LPCR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ContratsPartenaires</relationshipName>
    <type>Lookup</type>
</CustomField>