force-app/main/default/objects/LPCR_ContratPartenaire__c/fields/LPCR_ContactPartenaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactPartenaire__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Lien vers le contact signataire du contrat côté gestionnaire</inlineHelpText>
    <label>Contact Gestionnaire</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ContratsPartenaires</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>