force-app/main/default/objects/LPCR_ContratPartenaire__c/fields/LPCR_ContratPrincipal__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContratPrincipal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>S&apos;il s&apos;agit d&apos;un avenant, lien vers le contrat principal</description>
    <inlineHelpText>S&apos;il s&apos;agit d&apos;un avenant, lien vers le contrat principal</inlineHelpText>
    <label>Contrat principal</label>
    <referenceTo>LPCR_ContratPartenaire__c</referenceTo>
    <relationshipLabel>Avenants</relationshipLabel>
    <relationshipName>ContratsPartenairesAvenants</relationshipName>
    <type>Lookup</type>
</CustomField>