force-app/main/default/objects/LPCR_ContratPartenaire__c/fields/LPCR_DateRenouvellement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateRenouvellement__c</fullName>
    <label>Date de renouvellement</label>
    <type>Date</type>
</CustomField>