force-app/main/default/objects/LPCR_ContratPartenaire__c/fields/LPCR_NombreBonsAchat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreBonsAchat__c</fullName>
    <description>Champ permettant de pré-remplir le numéro de bon d&#39;achat à partir du numéro de contrat</description>
    <label>Nombre de bons d&#39;achat</label>
    <summaryForeignKey>LPCR_BonAchatPartenaire__c.LPCR_ContratPartenaire__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>