force-app/main/default/objects/LPCR_ContratPartenaire__c/fields/LPCR_Opportunite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Opportunite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contrats Partenaires</relationshipLabel>
    <relationshipName>ContratsPartenaires</relationshipName>
    <type>Lookup</type>
</CustomField>