force-app/main/default/objects/LPCR_ContratPartenaire__c/fields/LPCR_OptionAffichage__c.field-meta.xml
<CustomField>
    <fullName>LPCR_OptionAffichage__c</fullName>
    <label>Option d&#39;affichage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affichage total</fullName>
            </value>
            <value>
                <fullName>Affichage partiel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>