force-app/main/default/objects/LPCR_ContratPartenaire__c/fields/LPCR_Revalorisation25__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Revalorisation25__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revalorisation 2,5%</label>
    <type>Checkbox</type>
</CustomField>