force-app/main/default/objects/LPCR_ContratPartenaire__c/fields/LPCR_Revalorisation25Text__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Revalorisation25Text__c</fullName>
    <formula>IF( LPCR_Revalorisation25__c = True, &quot;Le prix de vente par Berceau indiqué sur le bon d’achat pourra être révisé à chaque date d’anniversaire du bon d’achat, le prix de vente par Berceau sera révisé automatiquement et de plein droit de 2.5%.&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revalorisation 2,5% Text</label>
    <type>Text</type>
</CustomField>