force-app/main/default/objects/LPCR_ContratPartenaire__c/fields/LPCR_Rue__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Rue__c</fullName>
    <label>Rue</label>
    <type>TextArea</type>
</CustomField>