force-app/main/default/objects/LPCR_ContratPartenaire__c/fields/LPCR_Statut__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Statut__c</fullName>
    <inlineHelpText>Statut du contrat gestionnaire</inlineHelpText>
    <label>Statut</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brouillon</fullName>
                <default>true</default>
                <label>Brouillon</label>
            </value>
            <value>
                <fullName>Prêt à envoyer</fullName>
            </value>
            <value>
                <fullName>Envoyé pour signature</fullName>
            </value>
            <value>
                <fullName>Signé</fullName>
            </value>
            <value>
                <fullName>Actif</fullName>
            </value>
            <value>
                <fullName>Annulé</fullName>
            </value>
            <value>
                <fullName>Terminé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>