force-app/main/default/objects/LPCR_ContratPartenaire__c/fields/LPCR_TypeContrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeContrat__c</fullName>
    <label>Type de contrat</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
                <default>true</default>
                <label>Principal</label>
            </value>
            <value>
                <fullName>Avenant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>