force-app/main/default/objects/LPCR_ContratPartenaire__c/fields/LPCR_TypeReconduction__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeReconduction__c</fullName>
    <label>Type de reconduction</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LPCR_CDDCDI__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>LPCR_TypeReconduction</valueSetName>
    </valueSet>
</CustomField>