force-app/main/default/objects/LPCR_ContratPartenaire__c/fields/LPCR_Ville__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Ville__c</fullName>
    <label>Ville</label>
    <length>100</length>
    <type>Text</type>
</CustomField>