force-app/main/default/objects/LPCR_ContratPartenaire__c/fields/LPCR_Visite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Visite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visité</label>
    <type>Checkbox</type>
</CustomField>